--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
+    "postbuild": "rm -rf ../docs && mkdir -p ../docs && cp -r build/* ../docs/",
+    "predeploy": "npm run build && npm run postbuild",
     "deploy": "gh-pages -d build -b gh-pages",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
